apps/no-deployment/smokeping/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: smokeing-ingress
  annotations:
    kubernetes.io/ingress.class: 'nginx'
    nginx.ingress.kubernetes.io/auth-type: basic
    nginx.ingress.kubernetes.io/auth-secret: basic-auth
spec:
  rules:
    - host: smokeping.prod.gsdev.me
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: smokeping-svc
                port:
                  number: 80
